# MonolithLauncher

./: .dockerignore  .gitignore  Changelogs.md  LICENSE  README.md  build.bat  build.sh  dev.bat  dev.sh  package.json  start.sh  tsconfig.json
.github/workflows/: nightly-release.yml
app/: index.html  styles.css
app/src/: accounts.ts  actions.ts  config.ts  dom.ts  instances.ts  java.ts  logs.ts  main.ts  misc.ts  nav.ts  overlay.ts  select.ts  state.ts  tauri.ts  titlebar.ts  versions.ts
builder/: Dockerfile.linux  Dockerfile.macos  Dockerfile.windows  README.md
builder/scripts/: build-linux.sh  build-macos.sh  build-windows.sh
docs/: CHANGELOG.md  GETTING_STARTED.md
monolith-ui/: package.json
monolith-ui/app/: globals.css  layout.tsx  page.tsx
monolith-ui/components/: account.tsx  branch-connector-card.tsx  install-overlay.tsx  launcher-provider.tsx  new-user-tips.tsx  overview-tabs.tsx  overview.tsx  settings.tsx  sidebar.tsx  titlebar.tsx  update-notifier.tsx
monolith-ui/components/dialogs/: add-account-dialog.tsx  add-directory-dialog.tsx  (+2 more)
monolith-ui/lib/: launcher-types.ts  launcher-utils.ts  tauri.ts
monolith-ui/styles/: globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  diagnostics.rs  java.rs  lib.rs  main.rs  modrinth.rs
src-tauri/src/commands/: config.rs  instances.rs  mod.rs  packs.rs  servers.rs  system.rs  worlds.rs
src-tauri/src/minecraft/: download.rs  install.rs  instance.rs  launch.rs  mod.rs  models.rs  util.rs  versions.rs
(+10 files in other folders)
