[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["dvnxvll"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
regex = "1.10"
ureq = { version = "2.10", features = ["json"] }
urlencoding = "2.1"
zip = "0.6"
uuid = { version = "1.8", features = ["v3"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
sysinfo = "0.30"
discord-rpc-client = "0.4"
fastnbt = "2.5"
flate2 = "1.0"
toml = "0.8"
